--- a/indexresponsive.html
+++ b/indexresponsive.html
@@ -26,7 +26,7 @@
        
         <div class="menu">
 
-            <img src="../Actividad practica 1.1/imagenes/fotoyo.jpg" alt="foto yo">
+            <img src="fotoyo.jpg" alt="foto yo">
      
         </div>
 
@@ -50,16 +50,16 @@
         <div class="contaudio">
             <h3>Canciones</h3>
                 <h4>Saxofón</h4>
-                <audio src="../Actividad practica 1.1/imagenes/Sax performance.mp3" controls></audio>
+                <audio src="Sax performance.mp3" controls></audio>
                 <P class="descrip">Interpretación en Saxofón de Daniele Vitale.</P>
                 <h4>Piano</h4>
-                <audio src="../Actividad practica 1.1/imagenes/Piano performance.mp3" controls></audio>
+                <audio src="Piano performance.mp3" controls></audio>
                 <p class="descrip">Interpretación en piano de Yann Tiersen.</p>
         </div>
 
         <div class="momentos">
             <h3>Momentos Felices</h3>
-                <img class="fotomomentos" src="../Actividad practica 1.1/imagenes/feliz.jpeg" alt="momentos felices">
+                <img class="fotomomentos" src="feliz.jpeg" alt="momentos felices">
                 <p class="pmom">Esta foto es uno de mis momentos felices, pues me rememora una cena especial que compartí con mi familia, luago de realizar una visita
                     a la exhibición de luces en el Jardín Botánico hace dos años. Es importante para mí, puesto que sucedió poco tiempo antes del incio de la pandemia 
                     y es uno de los recuerdos que más guardo dado que desde entonces no hemos vuelto a disfrutar de muchas salidas. </p>
