--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         
         <nav>
             <a href="#" class="nav-enlace">Inicio</a>
-            <a href="storyboardindex.html" class="nav-enlace">Storyboard</a>
             <a href="guionindex.html" class="nav-enlace">Guión Técnico</a>
             <a href="https://youtu.be/thrt1o4jS1E" class="nav-enlace">Mi video</a>
+            <a href="#" class="nav-enlace">Viajes</a>
             <a href="#" class="nav-enlace">Contacto</a>
         </nav>
 
