--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página responsiva</title>
+    <title>Mi Página</title>
     <link rel="stylesheet" href="estilos.css">
     <link rel="icon" href="" type="image/png">
 
 </head>
 <body>
-    <h1>Mi Página</h1>
+    <h1>Página Personal</h1>
  
         
         <nav>
