--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
            <h2>Descripción personal</h2>
           
            <p>Mi nombre es Ana Sofía Fernández Buitrago y tengo 16 años. Actualmente, soy estudiante 
-               de grado 11° y en mi tiempo libre disfruto de actividades como ver películas, leer, bailar 
+               de Publicidad Internacional en la Universidad Sergio Arboleda y en mi tiempo libre disfruto de actividades como ver películas, leer, bailar, actuar 
                y tocar piano. Por otro lado, los fines de semana me gusta dedidarme a practicar mi deporte 
                favorito que es la natación y de vez en cuando pasar las tardes preparando pastelería para 
                compartir con mis amigos y familia.</p>
@@ -55,14 +55,6 @@
                 <h4>Piano</h4>
                 <audio src="Piano performance.mp3" controls></audio>
                 <p class="descrip">Interpretación en piano de Yann Tiersen.</p>
-        </div>
-
-        <div class="momentos">
-            <h3>Momentos Felices</h3>
-                <img class="fotomomentos" src="feliz.jpeg" alt="momentos felices">
-                <p class="pmom">Esta foto es uno de mis momentos felices, pues me rememora una cena especial que compartí con mi familia, luago de realizar una visita
-                    a la exhibición de luces en el Jardín Botánico hace dos años. Es importante para mí, puesto que sucedió poco tiempo antes del incio de la pandemia 
-                    y es uno de los recuerdos que más guardo dado que desde entonces no hemos vuelto a disfrutar de muchas salidas. </p>
         </div>
 
     </div>
