--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                de Publicidad Internacional en la Universidad Sergio Arboleda y en mi tiempo libre disfruto de actividades como ver películas, leer, bailar, actuar 
                y tocar piano. Por otro lado, los fines de semana me gusta dedidarme a practicar mi deporte 
                favorito que es la natación y de vez en cuando pasar las tardes preparando pastelería para 
-               compartir con mis amigos y familia.</p>
+               compartir con mis amigos y familia. Por cierto, también amo los gatos!</p>
 
         </div>
 
