--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         <div class="contenido">
            <h2>Descripción personal</h2>
           
-           <p>Mi nombre es Ana Sofía Fernández Buitrago y tengo 16 años. Actualmente, soy estudiante 
-               de Publicidad Internacional en la Universidad Sergio Arboleda y en mi tiempo libre disfruto de actividades como ver películas, leer, bailar, actuar 
+           <p>Mi nombre es Ana Sofía Fernández Buitrago y tengo 16 años. Soy estudiante 
+               de grado 11° y en mi tiempo libre disfruto de actividades como ver películas, leer, bailar, actuar 
                y tocar piano. Por otro lado, los fines de semana me gusta dedidarme a practicar mi deporte 
                favorito que es la natación y de vez en cuando pasar las tardes preparando pastelería para 
                compartir con mis amigos y familia. Por cierto, también amo los gatos!</p>
